#3: try to fix 100vh for hero header on mobile

--- a/website/src/assets/css/style.css
+++ b/website/src/assets/css/style.css
@@ -194,18 +194,9 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.png") bottom center;
+  background-position: bottom center;
   background-size: cover;
-}
-#hero:before {
-  content: "";
-  background: rgba(5, 13, 24, 0.3);
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
+  background-image: linear-gradient(0deg, rgba(5, 13, 24, 0.3), rgba(5, 13, 24, 0.3)), url("../img/hero-bg.png");
 }
 #hero .hero-container {
   position: relative;
