--- a/website/src/assets/scss/_hero.scss
+++ b/website/src/assets/scss/_hero.scss
@@ -4,19 +4,9 @@
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.png") bottom center;
+  background-position: bottom center;
   background-size: cover;
-
-  &:before {
-    content: "";
-    background: rgba($secondary, 0.3);
-    position: absolute;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-  }
+  background-image: linear-gradient(0deg, rgba($secondary, 0.3),  rgba($secondary, 0.3)), url("../img/hero-bg.png");
 
   .hero-container {
     position: relative;
